# swiftsc-compiler

./: CONTRIBUTING.md  Cargo.toml  LIMITATIONS.md  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: codegen.rs  lib.rs
backend/src/wasm/: mod.rs
backend/tests/: codegen_tests.rs
driver/: Cargo.toml
driver/src/: abi.rs  main.rs
frontend/: Cargo.toml
frontend/src/: ast.rs  lib.rs  module_resolver.rs  parser.rs  token.rs
frontend/src/sema/: analyzer.rs  mod.rs  security.rs  symbol_table.rs
frontend/tests/: analyzer_tests.rs  lexer_tests.rs  parser_tests.rs  symbol_table_tests.rs
