[package]
name = "swiftsc-backend"
version = "1.0.3-beta"
edition = "2024"
authors = ["SwiftSC-Lang Contributors"]
description = "WASM backend and code generation for the SwiftSC-Lang compiler"
license = "MIT"
repository = "https://github.com/swiftsc-lang/swiftsc-compiler"

[dependencies]
swiftsc-frontend = { version = "1.0.3-beta", path = "../frontend" }
wasm-encoder = "0.38" # Or latest stable
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
wasmtime = "16.0" # For testing execution
wasmparser = "0.118"
