[package]
name = "swiftsc-driver"
version = "1.0.2-beta"
edition = "2021"

[dependencies]
swiftsc-frontend = { path = "../frontend" }
swiftsc-backend = { path = "../backend" }
swiftsc-runtime = { path = "../../swiftsc-runtime" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
