[package]
name = "swiftsc-frontend"
version = "1.0.3"
edition = "2021"
authors = ["SwiftSC-Lang Contributors"]
description = "Frontend (lexing, parsing, AST) for the SwiftSC-Lang compiler"
license = "MIT"
repository = "https://github.com/swiftsc-lang/swiftsc-compiler"

[dependencies]
logos = "0.13"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
